--- a/dwh.cfg
+++ b/dwh.cfg
@@ -1,5 +1,5 @@
 [CLUSTER]
-HOST=endpoint of the cluster
+HOST=endpoint of redshift
 DB_NAME=dwh
 DB_USER=dwhuser
 DB_PASSWORD=Passw0rd
@@ -26,5 +26,5 @@ DWH_DB_PASSWORD=Passw0rd
 DWH_PORT=5439
 
 [AWS]
-KEY=
-SECRET=
+KEY=''
+SECRET=''
